--- a/Online_Pizza_Shop/src/main/resources/application-prod.properties
+++ b/Online_Pizza_Shop/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/onlinepizzashop
 spring.datasource.username=postgres
-spring.datasource.password=postgres1artan
+spring.datasource.password=p123
 
 
 ## default connection pool
@@ -12,5 +12,5 @@ spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
