--- a/Online_Pizza_Shop/src/main/resources/application.properties
+++ b/Online_Pizza_Shop/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=9093
 spring.profiles.active=prod
 
 server.servlet.session.timeout=60m
-server.servlet.session.cookie.name=online_pizza_shop
+server.servlet.session.cookie.name=onlinepizzashop
 
 spring.mvc.hiddenmethod.filter.enabled=true
